SalesforceData/src/objects/SalesHeader__c.object
<CustomObject>
    <fields>
        <fullName>Bill_To_Customer__c</fullName>
        <label>Bill To Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_City__c</fullName>
        <label>Bill to City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_to_Postal_Code__c</fullName>
        <label>Bill to Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_to_State__c</fullName>
        <label>Bill to State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Street__c</fullName>
        <label>Bill to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EFT_Transaction_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EFT Transaction Status</label>
        <referenceTo>EFT_Transaction_Status__c</referenceTo>
        <relationshipLabel>SalesHeader</relationshipLabel>
        <relationshipName>SalesHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pick_Status__c</fullName>
        <label>Pick_Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_Lookup_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SalesHeader</relationshipLabel>
        <relationshipName>SalesHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>S_lookup_contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact lookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SalesHeader</relationshipLabel>
        <relationshipName>SalesHeader</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_to_City__c</fullName>
        <label>Ship to City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Postal_Code__c</fullName>
        <label>Ship to Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_to_State__c</fullName>
        <label>Ship to State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_to_Street__c</fullName>
        <label>Ship to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SalesHeader</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SalesHeader Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesHeader</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>